--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -6,6 +6,9 @@ jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:
+            - name: Checkout Repo
+              uses: actions/checkout@v4
+              
             - name: Welcome message
               run: echo "My first Github Actions Job"
 
@@ -13,4 +16,4 @@ jobs:
               run: ls
 
             - name: Read file
-              run: cat ../../README.md
+              run: cat README.md
