--- a/.github/workflows/ascii-workflow.yml
+++ b/.github/workflows/ascii-workflow.yml
@@ -9,17 +9,10 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
-      - name: Install Cowsay Program
-        run: sudo apt-get install -y cowsay
-
-      - name: Executing Cowsay CMD
-        run: cowsay -f dragon "Run for cover, I am a DRAGON.... RAWR" >> dragon.txt
-
-      - name: Test File Exists
-        run: grep -i "dragon" dragon.txt
-
-      - name: Read file
-        run: cat dragon.txt
+      - name: List repo files
+        run: ls -ltrha
      
-      - name: Checkout Repo Files
-        run: ls
+      - name: Executing shell script
+        run: ./ascii-script.sh
+      
+      
