--- a/.github/workflows/ascii-workflow.yml
+++ b/.github/workflows/ascii-workflow.yml
@@ -3,18 +3,33 @@ name: Generate ASCII Artwork
 on: push
 
 jobs:
-  ascii-job:
+  build-job:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
+      - name: Install Cowsay Program
+        run: sudo apt-get install -y cowsay
 
-      - name: List repo files
-        run: ls -ltrha
+      - name: Execute Cowsay CMD
+        run: cowsay -f dragon "Run for cover, I am a DRAGON.. RAWR" >> dragon.txt
      
-      - name: Executing shell script
-        run: |
-             chmod +x ascii-script.sh
-             ./ascii-script.sh
+      - name: Sleep 30 seconds
+        run: sleep 30
+
+  test-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: sleep for 10 seconds
+        run: sleep 10
+    
+      - name: Test file Exists
+        run: grep -i "dragon" dragon.txt
+
+  deploy-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Read file
+        run: cat dragon.txt
       
+      - name: Deploy
+        run: echo Deploying...
       
