--- a/.github/workflows/ascii-workflow.yml
+++ b/.github/workflows/ascii-workflow.yml
@@ -16,6 +16,7 @@ jobs:
         run: sleep 30
 
   test-job:
+    needs: build-job
     runs-on: ubuntu-latest
     steps:
       - name: sleep for 10 seconds
@@ -25,6 +26,7 @@ jobs:
         run: grep -i "dragon" dragon.txt
 
   deploy-job:
+    needs: test-job
     runs-on: ubuntu-latest
     steps:
       - name: Read file
